@@ -157,6 +157,15 @@ class FileUploadTest < WEBrick::HTTPServlet::AbstractServlet
   end
 end
 
+class InfiniteRefreshTest < WEBrick::HTTPServlet::AbstractServlet
+  def do_GET(req, res)
+    res['Content-Type'] = req.query['ct'] || "text/html"
+    res.status = req.query['code'] ? req.query['code'].to_i : '302'
+    number = req.query['q'] ? req.query['q'].to_i : 0
+    res['Refresh'] = " 0;url=http://localhost/infinite_refresh?q=#{number + 1}\r\n";
+  end
+end
+
 class InfiniteRedirectTest < WEBrick::HTTPServlet::AbstractServlet
   def do_GET(req, res)
     res['Content-Type'] = req.query['ct'] || "text/html"
